examples/failing/MutRec.purs
module MutRec where

x = y

y = x
